--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -26,6 +26,9 @@
   "author": "kugichka <kugi@kugi.club>",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/nesorter/nesorter-lib/issues"
   },
