--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -19,6 +19,9 @@
   "author": "kugichka <kugi@kugi.club>",
   "license": "MIT",
   "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./build/index.js",
   "files": [
