--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "pre-publish-packages": "changeset",
-    "publish-packages": "turbo run build && changeset version && changeset publish"
+    "publish-packages": "turbo run build && changeset version && changeset publish",
+    "dev": "turbo run dev"
   },
   "workspaces": [
     "packages/*"
