--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,10 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["build/**"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
