--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
     "pre-publish-packages": "changeset",
-    "publish-packages": "turbo run build && changeset version && changeset publish",
+    "publish-packages": "npm run build && changeset version && changeset publish",
+    "build": "eslint packages/**/*.ts && turbo run build",
     "dev": "turbo run dev"
   },
   "workspaces": [
@@ -15,5 +19,16 @@
   ],
   "dependencies": {
     "@changesets/cli": "^2.26.2"
+  },
+  "devDependencies": {
+    "prettier": "3.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-no-cyrillic-string": "^1.0.5",
+    "eslint-plugin-perfectionist": "^2.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-prettier": "9.0.0"
   }
 }
