--- a/packages/discord-stream-lib/package.json
+++ b/packages/discord-stream-lib/package.json
@@ -24,14 +24,15 @@
   },
   "homepage": "https://github.com/nesorter/monorepo#readme",
   "dependencies": {
-    "discord.js": "^13.10.3",
     "@discordjs/core": "^1.0.1",
     "@discordjs/voice": "^0.16.0",
     "@types/node": "^20.5.9",
+    "discord-api-types": "^0.37.56",
+    "discord.js": "^13.10.3",
     "libsodium-wrappers": "^0.7.11",
     "prism-media": "^1.3.5",
-    "typescript": "^5.2.2",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   },
   "keywords": [
     "bot",
