--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -36,11 +36,12 @@
   "homepage": "https://github.com/nesorter/monorepo#readme",
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2",
     "@types/node": "^20.5.8",
-    "typescript": "^5.2.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "music-metadata": "^8.1.4",
-    "rimraf": "^5.0.1"
+    "node-id3": "^0.2.6",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   }
 }
