--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -37,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.8",
     "console-gui-tools": "^3.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
