--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -30,7 +30,33 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node ./build/index.js",
-    "dev": "npx nodemon"
+    "dev": "npx nodemon",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "./",
+    "testMatch": [
+      "**/test/**/*.spec.ts"
+    ],
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageReporters": [
+      "text",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "**/src/**/**/*.{ts,tsx,js,jsx}"
+    ],
+    "coverageDirectory": "/test/.coverage",
+    "testEnvironment": "node"
   },
   "dependencies": {
     "@nesorter/lib": "*",
@@ -44,5 +70,10 @@
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
