--- a/packages/tui/tsconfig.json
+++ b/packages/tui/tsconfig.json
@@ -14,6 +14,9 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "declarationMap": true
-  }
+    "declarationMap": true,
+  },
+  "exclude": [
+    "./test/**/*"
+  ]
 }
