chore: tune tests

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "scripts": {
     "pre-publish-packages": "changeset",
-    "publish-packages": "npm run build && changeset version && changeset publish",
+    "publish-packages": "npm run test && npm run lint && npm run build && changeset version && changeset publish",
     "lint": "eslint packages/**/*.ts",
     "build": "turbo run build",
-    "dev": "turbo run dev"
+    "dev": "turbo run dev",
+    "test": "turbo run test"
   },
   "workspaces": [
     "packages/*"
