--- a/packages/tui/package.json
+++ b/packages/tui/package.json
@@ -44,7 +44,8 @@
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
