--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "music-metadata": "^8.1.4",
+    "nanoid": "^5.0.4",
     "node-id3": "^0.2.6",
     "rimraf": "^5.0.1",
     "typescript": "^5.2.2"
